--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en" class="no-js">
     <!-- BEGIN HEAD -->
     <head>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-29EYC9TY8V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-29EYC9TY8V');
+</script>
         <meta charset="utf-8"/>
         <title>WOMENCourses - сливы курсов для девушек. Кристина Егиазарова все курсы.</title>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
