--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- BEGIN HEAD -->
     <head>
 <!-- Google tag (gtag.js) -->
-<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-29EYC9TY8V"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-29EYC9TY8V"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
