--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   gtag('config', 'G-29EYC9TY8V');
 </script>
+<meta name="yandex-verification" content="3da058e57cd14db3" />
         <meta charset="utf-8"/>
         <title>WOMENCourses - сливы курсов для девушек. Кристина Егиазарова все курсы.</title>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
