--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="yandex-verification" content="3da058e57cd14db3" />
         <meta charset="utf-8"/>
         <title>WOMENCourses - сливы курсов для девушек. Кристина Егиазарова все курсы.</title>
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+        <link rel="icon" href="favicon.ico">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta name="description" content="299 рублей Кристина Егиазарова все курсы. Кристина Егиазарова все курсы. Кристина Егиазарова Закрытое духовное шоу. Кристина Егиазарова Исходный код. Кристина Егиазарова Код любви" />
